# AnsysAgent

./: .env.exampl  .gitignore  CLAUDE.md  README.md  ansys-agent.spec  build.bat  build.sh  main.py  pyproject.toml  requirements.txt
.ansysagent/: mcp_servers.json
.rag/: keyword_index.json
agent/: chat_agent.py  commands.py  config_manager.py  dispatcher.py  log_server.py  logger.py  mcp_manager.py  memory_manager.py  omagent_runtime.py  paths.py  pet.py  pet_agent.py  prompt.py  role_manager.py  skill_manager.py  sub_agent_base.py  terminal_renderer.py  tool_definitions.py
agent/sub_agents/: __init__.py  advanced_meshing_agent.py  cost_agent.py  (+16 more)
docs/: ARCHITECTURE.md  rag_architecture.md
rag/: __init__.py  config.py  config_manager.py  ingest.py  retriever.py  service.py
tests/: test_regressions.py
tools/: advanced_meshing_tools.py  ansys_error_collector.py  cad_import_tools.py  circuit_tools.py  cloud_tools.py  cost_tools.py  coupling_tools.py  crash_tools.py  database_tools.py  diagnostic_tools.py  dpf_tools.py  dynamic_reporting_tools.py  embedding_config_tool.py  ev_powertrain_tools.py  fatigue_tools.py  fluent_tools.py  geometry_tools.py  icepak_tools.py  knowledge_tools.py  mapdl_tools.py  material_tools.py  maxwell_tools.py  mechanical_tools.py  memory_tools.py  mesh_tools.py  motorcad_tools.py  nvh_tools.py  optislang_tools.py  prime_mesh_tools.py  project_tools.py  report_tools.py  result_tools.py  rmxprt_tools.py  skill_tools.py  sweep_tools.py  test_data_tools.py  utils.py  vehicle_cfd_tools.py  vehicle_dynamics_tools.py  vehicle_nvh_tools.py  (+4 more)
(+13 files in other folders)
